# AsyncAPIPractice

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
app/: crud.py  deps.py  main.py  models.py
app/core/: config.py  db.py  syncDb.py
tests/: conftest_async.py  conftest_sync.py  test_main.py
