[project]
name = "asyncapitest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.9.1",
    "sqlmodel[asyncio]>=0.0.24",
    "uvicorn[standard]>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]
